# go-blockchain

./: .gitignore  BUILD.bazel  CHANGELOG.md  README.md  glide.yaml  main.go
abci/: BUILD.bazel  app.go
database/: BUILD.bazel  state.go  state_test.go
database/testdata/: 000000.vlog
types/: BUILD.bazel  block.go  blockchain.go  merkle.go  merkle_test.go
