load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["app.go"],
    importpath = "github.com/robbinhan/go-blockchain/abci",
    visibility = ["//visibility:public"],
    deps = [
        "//database:go_default_library",
        "//types:go_default_library",
        "//vendor/github.com/dgraph-io/badger:go_default_library",
        "//vendor/github.com/tendermint/abci/types:go_default_library",
        "//vendor/github.com/tendermint/tmlibs/log:go_default_library",
    ],
)
