load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["state.go"],
    importpath = "github.com/robbinhan/go-blockchain/database",
    visibility = ["//visibility:public"],
    deps = [
        "//types:go_default_library",
        "//vendor/github.com/dgraph-io/badger:go_default_library",
        "//vendor/github.com/tendermint/tmlibs/log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["state_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/dgraph-io/badger:go_default_library"],
)
